changes in section headings and resolved overflow issue above 769px

--- a/css/tooplate-infinite-loop.css
+++ b/css/tooplate-infinite-loop.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  position: absolute;
 }
 a {
   transition: all 0.3s ease;
